--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "04abef45",
+   "id": "c5939309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e07ff6",
+   "id": "e4267c66",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Determine path to Chrome Driver & Initialise browser\n",
     "\n",
-    "executable_path = {'executable_path':\"C:/Drivers/chromedriver\\chromedriver.exe\"}\n",
+    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
     "browser = Browser(\"chrome\", **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4441a1",
+   "id": "bc8ac709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb2c2d3",
+   "id": "0e07af19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use BeautifulSoup to write html\n",
     "\n",
     "html = browser.html\n",
-    "beautiful_soup = bs(html,\"html.parser\")"
+    "soup = bs(html,\"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00200729",
+   "id": "a960a47d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22028533",
+   "id": "f5913e4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ed872d",
+   "id": "7ccc527d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3892d81f",
+   "id": "08dc2e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e8ad10",
+   "id": "64ffa152",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,21 +117,21 @@
     "\n",
     "results = browser.find_by_xpath(xpath)\n",
     "image = results[0]\n",
-    "img.click()"
+    "image.click()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6b4c36",
+   "id": "2003a59b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtain image url using BeautifulSoup\n",
     "\n",
     "html_image = browser.html\n",
-    "beautiful_soup = bs(html_image, \"html.parser\")\n",
-    "image_url = beautiful_soup.find(\"img\", class_=\"fancybox-image\")[\"src\"]\n",
+    "soup = bs(html_image, \"html.parser\")\n",
+    "image_url = soup.find(\"img\", class_=\"fancybox-image\")[\"src\"]\n",
     "featured_image_url = base_url + image_url\n",
     "print(featured_image_url)"
    ]
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0385400b",
+   "id": "6a14b7db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,20 +152,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390bb2d6",
+   "id": "1b8ffbee",
    "metadata": {},
    "outputs": [],
    "source": [
     "html_weather = browser.html\n",
-    "beautiful_soup = bs(html_weather, \"html.parser\")\n",
-    "mars_weather = beautiful_soup.find(\"p\", class_=\"TweetTextSize TweetTextSize--normal js-tweet-text tweet-text\").text\n",
+    "soup = bs(html_weather, \"html.parser\")\n",
+    "mars_weather = soup.find(\"p\", class_=\"TweetTextSize TweetTextSize--normal js-tweet-text tweet-text\").text\n",
     "print(mars_weather)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12e07e3",
+   "id": "44acac10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cda502d",
+   "id": "91f60230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41f48e9b",
+   "id": "1cb30804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7ef0c2",
+   "id": "3fa2ac8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0676f9b1",
+   "id": "0a43edd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,8 +233,8 @@
     "cerberus_open_click = browser.find_by_xpath( \"//*[@id='wide-image-toggle']\").click()\n",
     "time.sleep(1)\n",
     "cerberus_image = browser.html\n",
-    "beautiful_soup = bs(cerberus_image, \"html.parser\")\n",
-    "cerberus_url = beautiful_soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
+    "soup = bs(cerberus_image, \"html.parser\")\n",
+    "cerberus_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
     "cerberus_image_url = hemisphere_base_url + cerberus_url\n",
     "print(cerberus_image_url)\n",
     "cerberus_title = beautiful_soup.find(\"h2\",class_=\"title\").text\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10262882",
+   "id": "d4febe46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,21 +258,21 @@
     "schiaparelli_open_click = browser.find_by_xpath( \"//*[@id='wide-image-toggle']\").click()\n",
     "time.sleep(1)\n",
     "schiaparelli_image = browser.html\n",
-    "beautiful_soup = bs(schiaparelli_image, \"html.parser\")\n",
-    "schiaparelli_url = beautiful_soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
+    "soup = bs(schiaparelli_image, \"html.parser\")\n",
+    "schiaparelli_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
     "schiaparelli_image_url = hemisphere_base_url + schiaparelli_url\n",
     "print(schiaparelli_image_url)\n",
     "schiaparelli_title = beautiful_soup.find(\"h2\",class_=\"title\").text\n",
     "print(schiaparelli_title)\n",
     "back_button = browser.find_by_xpath(\"//*[@id='splashy']/div[1]/div[1]/div[3]/section/a\").click()\n",
     "schiaparelli = {\"image title\":schiaparelli_title, \"image url\": schiaparelli_image_url}\n",
-    "hemisphere_img_urls.append(schiaparelli)"
+    "hemisphere_image_urls.append(schiaparelli)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234be912",
+   "id": "6c28da5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,11 +283,11 @@
     "syrtis_major_open_click = browser.find_by_xpath( \"//*[@id='wide-image-toggle']\").click()\n",
     "time.sleep(1)\n",
     "syrtis_major_image = browser.html\n",
-    "beautiful_soup = bs(syrtis_major_image, \"html.parser\")\n",
+    "soup = bs(syrtis_major_image, \"html.parser\")\n",
     "syrtis_major_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
     "syrtis_major_image_url = hemisphere_base_url + syrtis_major_url\n",
     "print(syrtis_major_image_url)\n",
-    "syrtis_major_title = beautiful_soup.find(\"h2\",class_=\"title\").text\n",
+    "syrtis_major_title = soup.find(\"h2\",class_=\"title\").text\n",
     "print(syrtis_major_title)\n",
     "back_button = browser.find_by_xpath(\"//*[@id='splashy']/div[1]/div[1]/div[3]/section/a\").click()\n",
     "syrtis_major = {\"image title\":syrtis_major_title, \"image url\": syrtis_major_image_url}\n",
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d70442",
+   "id": "16ce6c4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,11 +308,11 @@
     "valles_marineris_open_click = browser.find_by_xpath( \"//*[@id='wide-image-toggle']\").click()\n",
     "time.sleep(1)\n",
     "valles_marineris_image = browser.html\n",
-    "beautiful_soup = bs(valles_marineris_image, \"html.parser\")\n",
-    "valles_marineris_url = beautiful_soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
+    "soup = bs(valles_marineris_image, \"html.parser\")\n",
+    "valles_marineris_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
     "valles_marineris_image_url = hemisphere_base_url + syrtis_major_url\n",
     "print(valles_marineris_image_url)\n",
-    "valles_marineris_title = beautiful_soup.find(\"h2\",class_=\"title\").text\n",
+    "valles_marineris_title = soup.find(\"h2\",class_=\"title\").text\n",
     "print(valles_marineris_title)\n",
     "back_button = browser.find_by_xpath(\"//*[@id='splashy']/div[1]/div[1]/div[3]/section/a\").click()\n",
     "valles_marineris = {\"image title\":valles_marineris_title, \"image url\": valles_marineris_image_url}\n",
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdce33cb",
+   "id": "2c94f7d1",
    "metadata": {},
    "outputs": [],
    "source": [
