--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "34f0b4ba",
+   "execution_count": 37,
+   "id": "734af6fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,41 @@
     "from bs4 import BeautifulSoup\n",
     "from datetime import datetime\n",
     "import os\n",
-    "import time"
+    "import time\n",
+    "from selenium import webdriver\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7eff541f",
+   "execution_count": 38,
+   "id": "d976d82c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Browser() argument after ** must be a mapping, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-d1882d1dbd77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mexecutable_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Users/minoperic/.wdm/drivers/chromedriver/mac64/98.0.4758.102/chromedriver\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#driver = webdriver.Chrome(ChromeDriverManager().install())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mbrowser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"chrome\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mexecutable_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheadless\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: Browser() argument after ** must be a mapping, not str"
+     ]
+    }
+   ],
    "source": [
     "# Determine path to Chrome Driver & Initialise browser\n",
     "\n",
-    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "executable_path = \"Users/minoperic/.wdm/drivers/chromedriver/mac64/98.0.4758.102/chromedriver\"\n",
+    "#driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "browser = Browser(\"chrome\", **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4932fbd1",
+   "id": "dec1c1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65eaa998",
+   "id": "6963a51d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a312a2b7",
+   "id": "dbd0f25d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9df58ed0",
+   "id": "4da57b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607ef1ed",
+   "id": "2914401a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48277eeb",
+   "id": "ded48268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0732a7ef",
+   "id": "69b9aaa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0486653a",
+   "id": "8a9d5a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9afeda0",
+   "id": "a0e6ed9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d99658d9",
+   "id": "455bf760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c527ad8",
+   "id": "c6730c14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b8a9357",
+   "id": "ff8f4413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ea7693",
+   "id": "6bbd354a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc29c326",
+   "id": "4e3496fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca811780",
+   "id": "fbf63296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e27826f",
+   "id": "73b59ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc36a263",
+   "id": "eaeea81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9108be6f",
+   "id": "efdde233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f12cca",
+   "id": "35af7e50",
    "metadata": {},
    "outputs": [],
    "source": [
