--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "734af6fe",
+   "execution_count": 58,
+   "id": "63c57c10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,41 +16,62 @@
     "import os\n",
     "import time\n",
     "from selenium import webdriver\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from selenium.webdriver.chrome.service import Service "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "d976d82c",
+   "execution_count": 57,
+   "id": "e712f973",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-57-c5ca812b661d>:5: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome('/Users/minoperic/Data Analytics/Homework/web-scraping-and-mongo-db-challenge/chromedriver')\n"
+     ]
+    },
+    {
      "ename": "TypeError",
-     "evalue": "Browser() argument after ** must be a mapping, not str",
+     "evalue": "'WebDriver' object cannot be interpreted as an integer",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-d1882d1dbd77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mexecutable_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Users/minoperic/.wdm/drivers/chromedriver/mac64/98.0.4758.102/chromedriver\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#driver = webdriver.Chrome(ChromeDriverManager().install())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mbrowser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"chrome\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mexecutable_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheadless\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: Browser() argument after ** must be a mapping, not str"
+      "\u001b[0;32m<ipython-input-57-c5ca812b661d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#driver = webdriver.Chrome(ChromeDriverManager(chrome_type=ChromeType.CHROMIUM).install())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdriver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/minoperic/Data Analytics/Homework/web-scraping-and-mongo-db-challenge/chromedriver'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mbrowser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"chrome\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheadless\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/splinter/browser.py\u001b[0m in \u001b[0;36mBrowser\u001b[0;34m(driver_name, retry_count, *args, **kwargs)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mDriverNotFoundError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No driver for %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mdriver_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mget_driver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretry_count\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mretry_count\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/splinter/browser.py\u001b[0m in \u001b[0;36mget_driver\u001b[0;34m(driver, retry_count, *args, **kwargs)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mretry_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'WebDriver' object cannot be interpreted as an integer"
      ]
     }
    ],
    "source": [
     "# Determine path to Chrome Driver & Initialise browser\n",
     "\n",
-    "executable_path = \"Users/minoperic/.wdm/drivers/chromedriver/mac64/98.0.4758.102/chromedriver\"\n",
-    "#driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "browser = Browser(\"chrome\", **executable_path, headless=False)"
+    "s = Service('/Users/minoperic/')\n",
+    "driver = webdriver.Chrome(service=s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dec1c1cd",
+   "execution_count": 56,
+   "id": "0391da1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'browser' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-766ef441a8f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://mars.nasa.gov/news/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'browser' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Set page to visit\n",
     "\n",
@@ -61,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6963a51d",
+   "id": "3ac709e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd0f25d",
+   "id": "de24ec69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da57b8f",
+   "id": "205596d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2914401a",
+   "id": "36f73266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ded48268",
+   "id": "14d39d94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69b9aaa6",
+   "id": "49f9b486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9d5a58",
+   "id": "c768fd23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e6ed9a",
+   "id": "a9bf9c9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "455bf760",
+   "id": "35397aa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6730c14",
+   "id": "4797cfff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8f4413",
+   "id": "d5ff425f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbd354a",
+   "id": "86cf8a4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3496fe",
+   "id": "1d31ec0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf63296",
+   "id": "dc812f02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b59ff7",
+   "id": "27956489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaeea81e",
+   "id": "a47b7ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efdde233",
+   "id": "fd71e261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35af7e50",
+   "id": "d48249b1",
    "metadata": {},
    "outputs": [],
    "source": [
